Add more configurations possible